--- a/tox.ini
+++ b/tox.ini
@@ -5,3 +5,4 @@ envlist=
 [testenv]
 commands=
   python -m unittest discover -s {toxinidir}/tests -t {toxinidir}/tests
+;  python -m unittest tests.test_query -v
